# cabs-usvc

./: .editorconfig  .gitmodules  LICENSE  README.md  compose.yaml
deploy/apps/: drivers.yaml  legacy.yaml  redis.yaml
deploy/db/: redis.yaml
deploy/mesh/: broker.yaml  sources.yaml  triggers.yaml
deploy/serverless/: operator.yaml
drivers/: .gitignore  .rustfmt.toml  Cargo.toml  Containerfile  func.yaml
drivers/db/: Containerfile  import.sh
drivers/docs/: db.rdb
drivers/src/: main.rs
drivers/src/app/: app.rs  config.rs  events.rs  index.rs  mod.rs
drivers/src/drivers/: endpoint.rs  entity.rs  mod.rs  repository.rs  rest.rs  service.rs
drivers/src/support/: clock.rs  cloudevents.rs  id.rs  mod.rs  money.rs  page.rs
frontend/: pubspec.yaml
frontend/lib/: accept.dart  home.dart  main.dart  offers.dart  ride.dart
frontend/test/: widget_test.dart
