[package]
name = "drivers"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
log = "0.4"
env_logger = "0.10"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

[dev-dependencies]
actix-rt = "2"
portpicker = "0.1"
reqwest = { version = "0.11", features = ["blocking"] }
anyhow = "1"
